Fixed html and css file validation

--- a/html/about.html
+++ b/html/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8"/>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Assignment 1: About</title>
         <link href="../css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="logo-nav-container">
-            <img src="..\images\Chateraise_logo_online.png" class="logo">
+            <img src="../images/Chateraise_logo_online.png" alt="Chateraise Logo" class="logo">
             <div class="divider-1"></div>
             <nav><ul class="navigation">
                 <li class="navlist"><a href="index.html">HOME</a></li>
@@ -30,8 +30,8 @@
         
             <p>Do you know where Châteraisé products are made? This red-roofed building surrounded by lush forest is Chateraise Hakushu Factory. It is here that ice cream, cakes and traditional Japanese sweets are produced, using renowned Hakushu mineral water from the Southern Alps. Besides Hakushu Factory, we also produce Châteraisé products at the Nakamichi and Toyomi Factories – all located in Yamanashi prefecture. It all started back in 1954, when a tiny store called “Amataro” opened in Kofu City. Its signature product, also called amataro, was a sweet made with high quality ingredients such as sugar and azuki beans in “Imagawayaki” (pancake-like patties filled with sweet bean paste). Amataro went on to become a big hit with customers. Since then, the wish to “make truly delicious sweets using natural ingredients to make people happy” has always stayed with us as our number one principle.</p>
 
-            <img src="../images/img-chateraise-shop.jpg" class="about-img">
-            <img src="../images/img-amataro.jpg" class="about-img">
+            <img src="../images/img-chateraise-shop.jpg" alt="Exterior of Chateraise Pastry Shop" class="about-img">
+            <img src="../images/img-amataro.jpg" alt="Old Chateriase Pastry Shop Building" class="about-img">
 
             <div class="title">
                 <h1>Chateraise’s Commitment</h1>
