--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8"/>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Assignment 1: Home</title>
         <link href="../css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="logo-nav-container">
-            <img src="../images/Chateraise_logo_online.png" class="logo">
+            <img src="../images/Chateraise_logo_online.png" alt="Chateraise Logo" class="logo">
             <div class="divider-1"></div>
             <nav><ul class="navigation">
                 <li class="navlist"><a href="index.html">HOME</a></li>
@@ -20,7 +20,7 @@
         </div>
 
         <section>
-            <div><img class="mainimg" src="../images/Châteraise-OnlineBanner-reward2.jpg">
+            <div><img class="mainimg" src="../images/Châteraise-OnlineBanner-reward2.jpg" alt="Chateraise online rewards">
             
             <div class="notice">
                 <p class="centertext">All of our products contain little to no additives.<br>Please keep refrigerated (frozen for ice cream) if not consumed immediately.</p></div>
@@ -33,7 +33,7 @@
                 <h4>Seasonal Japanese Apple and Mikan is available for a limited time until 30th November!</h4>
             </div>
 
-            <section class ="home-container">
+            <div class ="home-container">
                 <!-- View More Button -->
                 <div class="view-more-container">
                     <button onclick="viewMore()">View More ></button>
@@ -42,7 +42,7 @@
                 <!-- Apple & MIKAN Limited Items -->
                 <div class="flex-item">
                     <div class="flex-img">
-                        <img src="../images/JapaneseAppleAndMikanTart.png">
+                        <img src="../images/JapaneseAppleAndMikanTart.png" alt="Japanese Apple and MIKAN Tart">
                     </div>
                     <div class="flex-info">
                         <p class="item-name">Japanese Apple and MIKAN Tart</p>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="flex-item">
                     <div class="flex-img">
-                        <img src="../images/JapaneseAppleAndMikanCake.png">
+                        <img src="../images/JapaneseAppleAndMikanCake.png" alt="Japanese Apple and MIKAN Cake">
                     </div>
                     <div class="flex-info">
                         <p class="item-name">Japanese Apple and MIKAN Cake</p>
@@ -60,14 +60,14 @@
                 </div>
                 <div class="flex-item">
                     <div class="flex-img">
-                        <img src="../images/JapaneseAppleAndMikanSquareCake.png">
+                        <img src="../images/JapaneseAppleAndMikanSquareCake.png" alt="Japanese Apple and MIKAN Square Cake">
                     </div>
                     <div class="flex-info">
                         <p class="item-name">Japanese Apple and MIKAN Square Cake</p>
                         <p>SGD 6.00</p>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <div class="title">
                 <h1>【Limited】Christmas Collection 2024</h1>
@@ -76,7 +76,7 @@
                 <h4>Celebrate Christmas with Chateraise!<br>Pre-orders have begun!</h4>
             </div>
             
-            <section class ="home-container">
+            <div class ="home-container">
                 <!-- View More Button -->
                 <div class="view-more-container">
                     <button onclick="viewMore()">View More ></button>
@@ -85,7 +85,7 @@
                 <!-- Christmas Limited Items -->
                 <div class="flex-item">
                     <div class="flex-img">
-                        <img src="../images/PetitNoelFreshCream.png">
+                        <img src="../images/PetitNoelFreshCream.png" alt="Petit Noel Fresh Cream">
                     </div>
                     <div class="flex-info">
                         <p class="item-name">Petit Noel Fresh Cream</p>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="flex-item">
                     <div class="flex-img">
-                        <img src="../images/SantaClausPresentChocolate.png">
+                        <img src="../images/SantaClausPresentChocolate.png" alt="Santa Claus Present Chocolate">
                     </div>
                     <div class="flex-info">
                         <p class="item-name">Santa Claus Present Chocolate</p>
@@ -103,14 +103,14 @@
                 </div>
                 <div class="flex-item">
                     <div class="flex-img">
-                        <img src="../images/PistachioTreeCake.png">
+                        <img src="../images/PistachioTreeCake.png" alt="Pistachio Tree Cake">
                     </div>
                     <div class="flex-info">
                         <p class="item-name">Pistachio Tree Cake</p>
                         <p>SGD 7.20</p>
                     </div>
                 </div>
-            </section>
+            </div>
         </section>
         <script src="../jss/javascript.js"></script>
     </body>
