--- a/html/menu.html
+++ b/html/menu.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head><meta charset="utf-8"/>
+<html lang="en">
+    <head><meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Assignment 1: Menu</title>
         <link href="../css/style.css" rel="stylesheet" type="text/css"></head>
     <body>
         <div class="logo-nav-container">
-            <img src="..\images\Chateraise_logo_online.png" class="logo">
+            <img src="../images/Chateraise_logo_online.png" alt="Chateraise Logo" class="logo">
             <div class="divider-1"></div>
             <nav><ul class="navigation">
                 <li class="navlist"><a href="index.html">HOME</a></li>
@@ -17,16 +17,16 @@
             <div class="divider-2"></div>
         </div>
 
-        <img class = "mainimg" src="..\images\Chateraise_Japanese_Apple_and_Milkan_Fair_Online_Banner.jpg">
+        <img class = "mainimg" src="../images/Chateraise_Japanese_Apple_and_Milkan_Fair_Online_Banner.jpg" alt="Limited Time Japanese Apple and MIKAn Fair Cakes Available from 9th November onwards">
         <section>
             <div>
                 <h2 class="menutitle">Japanese Apple & Mikan Fair 2024</h2>
             </div>
             
-            <section class="menu-container">
+            <div class="menu-container">
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/JapaneseAppleAndMikanTart.png">
+                        <img src="../images/JapaneseAppleAndMikanTart.png" alt="Japanese Apple and MIKAN Tart">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Japanese Apple and MIKAN Tart</p>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/JapaneseAppleAndMikanCake.png">
+                        <img src="../images/JapaneseAppleAndMikanCake.png" alt="Japanese Apple and MIKAN Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Japanese Apple and MIKAN Cake</p>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/JapaneseAppleAndMikanSquareCake.png">
+                        <img src="../images/JapaneseAppleAndMikanSquareCake.png" alt="Japanese Apple and MIKAN Square Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Japanese Apple and MIKAN Square Cake</p>
@@ -53,23 +53,23 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/JapaneseAppleAndMikanRareCheeseCake.png">
+                        <img src="../images/JapaneseAppleAndMikanRareCheeseCake.png" alt="Japanese Apple and MIKAN Rare Cheese Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Japanese Apple and MIKAN Rare Cheese Cake</p>
                         <p>SGD 5.50</p>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <div>
                 <h2 class="menutitle">Christmas Collection 2024</h2>
             </div>
 
-            <section class="menu-container">
+            <div class="menu-container">
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/PistachioTreeCake.png">
+                        <img src="../images/PistachioTreeCake.png" alt="Pistachio Tree Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Pistachio Tree Cake</p>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/SnowSantaClaus.png">
+                        <img src="../images/SnowSantaClaus.png" alt="Snow Santa Claus">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Snow Santa Claus</p>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/XmasFruitWhiteZebra17cm.jpg">
+                        <img src="../images/XmasFruitWhiteZebra17cm.jpg" alt="Xmas Fruit White Zebra 17cm">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Xmas Fruit White Zebra 17cm</p>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/PetitNoelFreshCream.png">
+                        <img src="../images/PetitNoelFreshCream.png" alt="Petit Noel Fresh Cream">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Petit Noel Fresh Cream</p>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/PetitNoelChocolate.jpg">
+                        <img src="../images/PetitNoelChocolate.jpg" alt="Petit Noel Chocolate">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Petit Noel Chocolate</p>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/SantaClausPresentFreshCream.jpg">
+                        <img src="../images/SantaClausPresentFreshCream.jpg" alt="Santa Claus Present Fresh Cream">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Santa Claus Present Fresh Cream</p>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/SantaClausPresentChocolate.png">
+                        <img src="../images/SantaClausPresentChocolate.png" alt="Santa Claus Present Chocolate">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Santa Claus Present Chocolate</p>
@@ -132,23 +132,23 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/NoelBlanc20cm.jpg">
+                        <img src="../images/NoelBlanc20cm.jpg" alt="Noel Blanc 20cm">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Noel Blanc 20cm</p>
                         <p>SGD 51.00</p>
                     </div>
                 </div>
-            </section>
+            </div>
             
             <div>
                 <h2 class="menutitle">Sliced Cakes</h2>
             </div>
 
-            <section class="menu-container">
+            <div class="menu-container">
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/LegendaryFreshCreamCake.jpg">
+                        <img src="../images/LegendaryFreshCreamCake.jpg" alt="Legendary Fresh Cream Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Legendary Fresh Cream Cake</p>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/CrispyChocolateCake.jpg">
+                        <img src="../images/CrispyChocolateCake.jpg" alt="Crispy Chocolate Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Crispy Chocolate Cake</p>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/WhiteZebra.jpg">
+                        <img src="../images/WhiteZebra.jpg" alt="White Zebra Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">White Zebra</p>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/UjiMilleCrepeMatcha.jpg">
+                        <img src="../images/UjiMilleCrepeMatcha.jpg" alt="Uji Mille Crepe Matcha">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Uji Mille Crepe Matcha</p>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/TiramisuMilleCrepe.jpg">
+                        <img src="../images/TiramisuMilleCrepe.jpg" alt="Tiramisu Mille Crepe">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Tiramisu Mille Crepe</p>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/GateauChocolate.jpg">
+                        <img src="../images/GateauChocolate.jpg" alt="Gateau Chocolate">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Gateau Chocolate</p>
@@ -202,7 +202,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/CutePanda.jpg">
+                        <img src="../images/CutePanda.jpg" alt="Cute Panda Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Cute Panda</p>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/CuteBunny.jpg">
+                        <img src="../images/CuteBunny.jpg" alt="Cute Bunny Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Cute Bunny</p>
@@ -220,7 +220,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/ChocolateBear.jpg">
+                        <img src="../images/ChocolateBear.jpg" alt="Chocolate Bear Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Chocolate Bear</p>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/SmoothSouffleCheeseCake.jpg">
+                        <img src="../images/SmoothSouffleCheeseCake.jpg" alt="Smooth Souffle Cheese Cake">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Smooth Souffle Cheese Cake</p>
@@ -238,7 +238,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/TiramisuCup.jpg">
+                        <img src="../images/TiramisuCup.jpg" alt="Tiramisu Cup">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Tiramisu Cup</p>
@@ -247,14 +247,14 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-img">
-                        <img src="../images/JapaneseChestnutMontBlancaIu.jpg">
+                        <img src="../images/JapaneseChestnutMontBlancaIu.jpg" alt="Japanese Chestnut Mont Blanc">
                     </div>
                     <div class="menu-info">
                         <p class="item-name">Japanese Chestnut Mont Blanc</p>
                         <p>SGD 10.00</p>
                     </div>
                 </div>
-            </section>
+            </div>
     </section>
     </body>
 </html>
