--- a/html/storesncontact.html
+++ b/html/storesncontact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head><meta charset="utf-8"/>
+<html lang="en">
+    <head><meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Assignment 1: Stores & Contact</title>
         <link href="../css/style.css" rel="stylesheet" type="text/css"></head>
     <body>
         <div class="logo-nav-container">
-            <img src="..\images\Chateraise_logo_online.png" class="logo">
+            <img src="../images/Chateraise_logo_online.png" alt="Chateraise Logo" class="logo">
             <div class="divider-1"></div>
             <nav><ul class="navigation">
                 <li class="navlist"><a href="index.html">HOME</a></li>
